Update UI, use launcher instead of single application

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -17,24 +17,22 @@
         <activity android:name=".android.app.AboutActivity" />
         <activity android:name=".android.app.DetectionActivity" />
         <activity android:name=".android.app.DetectionResultActivity" />
+        <activity android:name=".android.app.MainActivity" />
+        <activity android:name=".android.app.ProductsActivity" />
+        <activity android:name=".android.app.SettingsActivity"/>
+        <activity android:name=".android.app.TemplateListActivity" />
+        <activity android:name=".android.app.TemplateSpecActivity" />
+        <activity android:name=".android.app.TemplateEditorActivity" />
         <activity
-            android:name=".android.app.MainActivity"
-            android:noHistory="true" >
+            android:name=".android.app.LauncherActivity"
+            android:label="@string/title_launcher" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </activity>
-        <activity android:name=".android.app.ProductsActivity" />
-        <activity
-            android:name=".android.app.SettingsActivity"
-            android:noHistory="true" />
-        <activity
-            android:name=".android.app.TemplateListActivity"
-            android:configChanges="orientation" />
-        <activity android:name=".android.app.TemplateSpecActivity" />
-        <activity android:name=".android.app.TemplateEditorActivity" />
     </application>
 
 </manifest>
