--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,9 +13,10 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".android.app.ProductsActivity"
+            android:icon="@android:drawable/ic_menu_agenda"
             android:label="@string/label_toolbar_catalog" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,7 @@
         </activity>
         <activity
             android:name=".android.app.HistoryActivity"
+            android:icon="@android:drawable/ic_menu_search"
             android:label="@string/label_toolbar_query" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +36,7 @@
         </activity>
         <activity
             android:name=".android.app.SettingsActivity"
+            android:icon="@android:drawable/ic_menu_preferences"
             android:label="@string/label_toolbar_settings" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +46,7 @@
         </activity>
         <activity
             android:name=".android.app.AboutActivity"
+            android:icon="@android:drawable/ic_menu_help"
             android:label="@string/label_toolbar_help" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -62,6 +66,7 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
