--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".android.app.ProductsActivity"
             android:icon="@android:drawable/ic_menu_agenda"
